# ISLI

./: .env.example  .env.production  .gitignore  .plan.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MEMORY.md  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.override.yml.bak  docker-compose.scale-out.yml  docker-compose.yml  plan.md  prompts.yaml
isli-agent-sdk/: Dockerfile  README.md  prompts.yaml  pyproject.toml  requirements.txt
isli-agent-sdk/examples/: research_agent.py  start_agent.py
isli-agent-sdk/src/isli_agent/: __init__.py  client.py  logging.py  models.py  pii_keeper_client.py  runner.py
isli-agent-sdk/src/isli_agent/runner/: __init__.py  constants.py  core.py  errors.py  lifecycle.py  model_client.py  parsing.py  pii_manager.py  prompt_assembler.py  providers.py  react_loop.py  sanitize.py  streaming.py  tool_engine.py
isli-agent-sdk/src/isli_agent/tools/: __init__.py  audio.py  channels.py  db_query.py  debugger.py  discover_skills.py  document_manager.py  engineering.py  git.py  kanban.py  keeper.py  memory.py  notifications.py  packages.py  secrets.py  system.py  ui_renderer.py  web.py  workspace.py
isli-agent-sdk/src/isli_agent/utils/: tokens.py
isli-agent-sdk/tests/: test_provider_mapping.py  test_runner_ollama_openai.py  test_runner_sync.py  test_runner_task_work_order.py  test_runner_tool_strategy.py  test_runner_xml_tools.py  test_tools_git.py  test_tools_new.py  test_tools_packages.py  test_tools_secrets.py  test_tools_workspace.py
isli-audio/: Dockerfile  pyproject.toml  requirements.txt
isli-audio/src/isli_audio/: __init__.py  auth.py  config.py  main.py  model_manager.py  redis_client.py  stt_engine.py  telemetry.py  tts_engine.py
isli-channels/: Dockerfile  pyproject.toml  requirements.txt
isli-channels/src/isli_channels/: attachments.py  auth.py  chunking.py  config.py  idempotency.py  identity.py  main.py  offline_queue.py  ordering.py  rate_limit.py  redis_client.py  retry.py  telemetry.py  webhook_validation.py
isli-channels/src/isli_channels/adapters/: base.py  telegram.py  whatsapp.py
isli-channels/tests/: conftest.py  test_api.py  test_whatsapp.py
isli-core/: .dockerignore  Dockerfile  README.md  alembic.ini  isli_dev.db  pyproject.toml  requirements.txt
isli-core/alembic/: env.py
isli-core/alembic/versions/: 20260511_001_initial.py  20260511_002_phase1_safety.py  20260511_003_phase2_resilience.py  20260511_004_phase3_channels.py  20260511_005_phase4_memory.py  20260511_006_phase5_cost.py  20260512_007_phase6_budgets.py  20260512_008_phase7_session_lifecycle.py  20260512_009_phase8_audit_transparency.py  20260517_0bad60745eba_migrate_episodic_embedding_to_pgvector_.py  20260517_5d394360388c_add_session_status_and_context_summary.py  20260517_7c695e5d18a9_add_session_journal.py  20260518_a1b2c3d4e5f6_add_agent_token_issued_at.py  20260519_001_add_context_inject_retry_tracking.py  20260519_002_add_archived_messages_to_sessions.py  20260519_003_add_last_memory_extracted_at.py  20260519_5048e15435b6_add_scheduled_at_to_tasks.py  20260519_643385a74bb8_add_persona_to_agent.py  20260520_11d2a499d4c2_add_last_message_at_to_sessions.py  20260521_f146474bfdb1_add_provider_settings_and_agent_api_key.py  20260524_f5cb013f7a4f_add_system_settings.py  20260525_file_sharing.py  20260530_2954c67aeea3_add_chromadb_backups.py  20260531_3a8f2e1b9c4d_add_secrets_table.py  20260531_b2283715c21f_add_model_routing.py  20260531_d5e8f2a1b3c9_add_session_metadata.py  20260601_006_notifications.py  20260601_007_add_known_agent_ids.py  20260602_a6e94c2b7614_add_cron_support_to_tasks.py  20260607_785c62fa414a_add_agent_picture.py  20260607_8dd5e6f4bee6_add_security_settings.py  20260611_9ab2c3d4e5f6_add_skill_registry.py  20260612_9ab2c3d4e5f7_add_skill_probe_fields.py  20260613_8f3e7a2b9c1d_add_skill_versioning.py  20260617_a1b2c3d4e5f6_add_council_rooms.py  20260618_0684a5fdc2b9_add_skill_owner_agent_id.py
isli-core/data/: isli_dev.db
isli-core/src/isli_core/: access.py  audit_writer.py  auth.py  budget.py  bulkhead.py  checkpoint.py  circuit_breaker.py  config.py  consent.py  db.py  db_utils.py  delegation.py  discovery.py  dlq.py  dynamic_config.py  estop.py  event_manager.py  fallback.py  file_tokens.py  gdpr.py  locking.py  main.py  model_transparency.py  models.py  partial_result.py  prompts_loader.py  redis_blob_client.py  redis_client.py  redis_streams.py  retry.py  schemas.py  secrets_service.py  session_lifecycle.py  ssrf.py  startup_validation.py  telemetry.py
isli-core/src/isli_core/compliance/: __init__.py  audit_integrity.py  controls.py  encryption.py  meta_compliance.py  pii_keeper_client.py  residency.py  sar.py  tia.py  unsubscribe.py  vendor_dpa.py
isli-core/tests/: conftest.py  test_access_modes.py  test_api_agents.py  test_api_agents_workspace.py  test_api_audit.py  test_api_budgets.py  test_api_file_sharing.py  test_api_secrets.py  test_api_sessions.py  test_api_system.py  test_api_tasks.py  test_api_usage.py  test_chromadb_backup.py  test_context_cache.py  test_context_worker.py  test_council_rooms.py  test_fix_422.py  test_gemini_pricing.py  test_memory_consistency.py  test_notification_engine.py  test_reasoning_budgets.py  test_security.py  test_semantic_api.py  test_session_attachments.py  test_skills_workspace.py  test_startup_validation.py  test_usr_skill_lifecycle.py  test_verification.py
isli-skills/: Dockerfile  README.md  pyproject.toml  requirements.txt
isli-skills/src/isli_skills/: auth.py  config.py  db_query.py  debugger.py  document_manager.py  main.py  playwright_service.py  redis_client.py  shell_executor.py  telemetry.py
isli-skills/tests/: conftest.py  test_api.py  test_browser.py  test_db_query.py  test_debugger.py  test_document_manager.py  test_shell_api.py  test_shell_executor.py
isli-workspace/: Dockerfile  README.md  pyproject.toml  requirements.txt
isli-workspace/src/isli_workspace/: auth.py  config.py  git_ops.py  main.py  package_ops.py  sandbox.py
isli-workspace/tests/: conftest.py  test_api.py  test_git.py  test_packages.py  test_sandbox.py
(+582 files in other folders)
