[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isli-audio"
version = "0.1.0"
description = "ISLI local audio service (STT/TTS)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "structlog>=24.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.4.0",
    "opentelemetry-api==1.32.1",
    "opentelemetry-sdk==1.32.1",
    "opentelemetry-instrumentation-fastapi==0.53b1",
    "opentelemetry-exporter-otlp==1.32.1",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "soundfile>=0.12",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/isli_audio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
