[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isli-channels"
version = "0.1.0"
description = "ISLI Channel Gateway — Telegram, WhatsApp, Web, Email adapters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.34.2",
    "httpx==0.28.1",
    "structlog==25.1.0",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "opentelemetry-api==1.32.1",
    "opentelemetry-sdk==1.32.1",
    "opentelemetry-instrumentation-fastapi==0.53b1",
    "opentelemetry-exporter-otlp==1.32.1",
    "python-telegram-bot==22.0",
    "twilio==9.5.2",
    "pyaileys[qrcode]==0.1.4",
    "python-jose[cryptography]==3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.1",
    "ruff==0.11.8",
    "mypy==1.15.0",
    "pre-commit==4.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
