[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isli-core"
version = "0.1.0"
description = "ISLI Core API — agent lifecycle, task bus, skill proxy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.34.2",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "asyncpg==0.30.0",
    "aiosqlite==0.21.0",
    "redis==5.2.1",
    "fakeredis==2.29.0",
    "python-jose[cryptography]==3.4.0",
    "httpx==0.28.1",
    "structlog==25.1.0",
    "opentelemetry-api==1.32.1",
    "opentelemetry-sdk==1.32.1",
    "opentelemetry-instrumentation-fastapi==0.53b1",
    "opentelemetry-exporter-otlp==1.32.1",
    "alembic==1.15.2",
    "sqlalchemy[asyncio]==2.0.40",
    "greenlet==3.2.1",
    "jsonschema==4.23.0",
    "cryptography==44.0.2",
    "prometheus-client==0.25.0",
    "python-multipart==0.0.12",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.1",
    "httpx==0.28.1",
    "ruff==0.11.8",
    "mypy==1.15.0",
    "pre-commit==4.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
